@@ -44,7 +44,7 @@ extern "C" {
 #define ALUT_ERROR_OUT_OF_MEMORY               0x200
 #define ALUT_ERROR_INVALID_ENUM                0x201
 #define ALUT_ERROR_INVALID_VALUE               0x202
-#define ALUT_ERROR_INVALID_OPERATION           0x203
+#define ALUT_ERROR_ALREADY_INITIALISED         0x203
 #define ALUT_ERROR_NOT_INITIALISED             0x204
 #define ALUT_ERROR_NO_CURRENT_CONTEXT          0x205
 #define ALUT_ERROR_AL_ERROR_ON_ENTRY           0x206
@@ -54,11 +54,13 @@ extern "C" {
 #define ALUT_ERROR_CREATE_CONTEXT              0x20A
 #define ALUT_ERROR_MAKE_CONTEXT_CURRENT        0x20B
 #define ALUT_ERROR_DESTROY_CONTEXT             0x20C
-#define ALUT_ERROR_FILE_NOT_FOUND              0x20D
-#define ALUT_ERROR_FILE_NOT_READABLE           0x20E
-#define ALUT_ERROR_UNSUPPORTED_FILE_TYPE       0x20F
-#define ALUT_ERROR_UNSUPPORTED_FILE_SUBTYPE    0x210
-#define ALUT_ERROR_CORRUPT_OR_TRUNCATED_FILE   0x211
+#define ALUT_ERROR_GEN_BUFFERS                 0x20D
+#define ALUT_ERROR_BUFFER_DATA                 0x20E
+#define ALUT_ERROR_FILE_NOT_FOUND              0x20F
+#define ALUT_ERROR_FILE_NOT_READABLE           0x210
+#define ALUT_ERROR_UNSUPPORTED_FILE_TYPE       0x211
+#define ALUT_ERROR_UNSUPPORTED_FILE_SUBTYPE    0x212
+#define ALUT_ERROR_CORRUPT_OR_TRUNCATED_FILE   0x213
 
 #define ALUT_WAVEFORM_SINE                     0x100
 #define ALUT_WAVEFORM_SQUARE                   0x101
